feat: complete netSep project

--- a/.env.production
+++ b/.env.production
@@ -7,5 +7,6 @@ VITE_CLIENT_BASE_URL=http://192.168.2.20:8000 # local
 VITE_SYSTEM_ANALYSER_ONE=https://efk.npd-co.com
 VITE_SYSTEM_ANALYSER_TWO=https://monitoring.npd-co.com
 
+VITE_KEY_CLOAK_ADMIN_PANEL=http://192.168.2.21:8181
 
                                          
