feat: add list desktop page

--- a/.env.development
+++ b/.env.development
@@ -1,13 +1,13 @@
-VITE_SERVER_BASE_URL=http://192.168.2.21:8000 # local
+VITE_SERVER_BASE_URL=https://daas.npd-co.com # local
 VITE_CLIENT_BASE_URL=http://192.168.2.21:8000 # local
 
 # VITE_SERVER_BASE_URL=https://ips.npd-co.com # production
 # VITE_CLIENT_BASE_URL=https://api.npd-co.com # production
 
-VITE_SYSTEM_ANALYSER_ONE=https://efk.npd-co.com
-VITE_SYSTEM_ANALYSER_TWO=https://monitoring.npd-co.com
+# VITE_SYSTEM_ANALYSER_ONE=https://efk.npd-co.com
+# VITE_SYSTEM_ANALYSER_TWO=https://monitoring.npd-co.com
 
-VITE_KEY_CLOAK_ADMIN_PANEL=http://192.168.2.21:8181
+VITE_KEY_CLOAK_ADMIN_PANEL=https://keycloak.npd-co.com
 
 
 
