--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,6 @@
 VITE_SERVER_BASE_URL=https://daas.npd-co.com # local
-VITE_CLIENT_BASE_URL=https://daas.npd-co.com # local
-# VITE_CLIENT_BASE_URL=http://192.168.2.21:8000 # local
+# VITE_CLIENT_BASE_URL=https://daas.npd-co.com # local
+VITE_CLIENT_BASE_URL=http://192.168.2.21:8000 # local
 
 
 VITE_KEY_CLOAK_ADMIN_PANEL=http://192.168.2.21:8080
