--- a/.env.production
+++ b/.env.production
@@ -1,12 +1,13 @@
-VITE_SERVER_BASE_URL=http://192.168.1.54:8000 # local
-VITE_CLIENT_BASE_URL=http://192.168.2.20:8000 # local
+VITE_ANALYSES_BASE_URL=http://192.168.200.2:8001 # local
+# VITE_CLIENT_BASE_URL=https://daas.npd-co.com # local
+VITE_CLIENT_BASE_URL=http://192.168.200.2:8000 # local
 
-# VITE_SERVER_BASE_URL=https://ips.npd-co.com # production
-# VITE_CLIENT_BASE_URL=https://api.npd-co.com # production
+
+VITE_KEY_CLOAK_ADMIN_PANEL=http://192.168.200.2:8080
+                                         
 
 VITE_SYSTEM_ANALYSER_ONE=https://efk.npd-co.com
 VITE_SYSTEM_ANALYSER_TWO=https://monitoring.npd-co.com
 
-VITE_KEY_CLOAK_ADMIN_PANEL=http://192.168.2.21:8181
 
                                          
