--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,10 @@ services:
     image: node:alpine
     container_name: vite_docker
     environment:
-      - VITE_CLIENT_BASE_URL=http://localhost:8000
-      - VITE_KEY_CLOAK_ADMIN_PANEL=http://localhost:8080
+      - VITE_CLIENT_BASE_URL=http://192.168.200.2:8000
+      - VITE_KEY_CLOAK_ADMIN_PANEL=http://192.168.200.2:8080
+      - VITE_ANALYSES_BASE_URL=http://192.168.200.2:8001
+
     command: sh -c "npm run build && npm run preview"
     ports:
       - "4173:4173"
