--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,13 @@
-VITE_ANALYSES_BASE_URL=http://192.168.2.20:8001 # local
-# VITE_CLIENT_BASE_URL=https://daas.npd-co.com # local
-VITE_CLIENT_BASE_URL=http://192.168.2.21:8001 # local
-
-
+# Local variables
+VITE_ANALYSES_BASE_URL=http://192.168.2.20:8001 
 VITE_KEY_CLOAK_ADMIN_PANEL=http://192.168.2.21:8080
+VITE_CLIENT_BASE_URL=http://192.168.2.21:8001 
+
+# # Server variables
+# VITE_ANALYSES_BASE_URL=https://sandbox.npd-co.com 
+# VITE_CLIENT_BASE_URL=https://daas.npd-co.com 
+# VITE_KEY_CLOAK_ADMIN_PANEL=http://192.168.2.21:8080
+
+
+
                                          
