fix: pagination bug

--- a/.env.development
+++ b/.env.development
@@ -1,12 +1,13 @@
 # Local variables
-VITE_ANALYSES_BASE_URL=http://192.168.254.196:8001
-VITE_KEY_CLOAK_ADMIN_PANEL=http://192.168.2.21:8080
-VITE_CLIENT_BASE_URL=http://192.168.254.198:8001
+# VITE_ANALYSES_BASE_URL=http://192.168.254.196:8001
+# VITE_CLIENT_BASE_URL=http://192.168.254.198:8002
+
+# VITE_KEY_CLOAK_ADMIN_PANEL=http://192.168.2.21:8080
 
 # # Server variables
-# VITE_ANALYSES_BASE_URL=https://sandbox.npd-co.com 
-# VITE_CLIENT_BASE_URL=https://daas.npd-co.com 
-# VITE_KEY_CLOAK_ADMIN_PANEL=http://192.168.2.21:8080
+VITE_ANALYSES_BASE_URL=https://sandbox.npd-co.com 
+VITE_CLIENT_BASE_URL=https://daas.npd-co.com 
+VITE_KEY_CLOAK_ADMIN_PANEL=http://192.168.2.21:8080
 
 
 
