--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@iconify/react": "^4.1.0",
     "axios": "^1.4.0",
     "class-variance-authority": "^0.6.0",
+    "i18next": "^23.7.11",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.1",
+    "react-i18next": "^14.0.0",
     "react-router-dom": "^6.11.2",
     "react-toastify": "^9.1.3",
     "swr": "^2.1.5"
