feat: add dynamic http port of daas

--- a/.env.production
+++ b/.env.production
@@ -9,5 +9,7 @@ VITE_KEY_CLOAK_ADMIN_PANEL=http://192.168.200.2:8080
 VITE_SYSTEM_ANALYSER_ONE=https://efk.npd-co.com
 VITE_SYSTEM_ANALYSER_TWO=https://monitoring.npd-co.com
 
+VITE_IS_SSL=false
+
 
                                          
