--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.4"
+version: '3.4'
 services:
   vite_docker:
     image: node:alpine
@@ -7,10 +7,11 @@ services:
       - VITE_CLIENT_BASE_URL=http://192.168.200.2:8000
       - VITE_KEY_CLOAK_ADMIN_PANEL=http://192.168.200.2:8080
       - VITE_ANALYSES_BASE_URL=http://192.168.200.2:8001
+      - VITE_IS_SSL=false
 
     command: sh -c "npm run build && npm run preview"
     ports:
-      - "4173:4173"
+      - '4173:4173'
     working_dir: /srv/app
     volumes:
       - type: bind
