update ( docker  & title & searchInput )

--- a/.env.development
+++ b/.env.development
@@ -7,7 +7,7 @@ VITE_CLIENT_BASE_URL=http://192.168.2.24:8000 # hooman
 # VITE_ANALYSES_BASE_URL=https://sandbox.npd-co.com 
 # VITE_CLIENT_BASE_URL=https://daas.npd-co.com 
 VITE_KEY_CLOAK_ADMIN_PANEL=http://192.168.2.21:8080
-VITE_IS_SSL=true
+VITE_IS_SSL=false
 
 
 
