--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - VITE_CLIENT_BASE_URL=http://192.168.200.2:8000
       - VITE_KEY_CLOAK_ADMIN_PANEL=http://192.168.200.2:8080
       - VITE_ANALYSES_BASE_URL=http://192.168.200.2:8001
+      - VITE_IS_SSL=true
 
     command: sh -c "npm install && npm run build && npm run preview"
     ports:
