--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-date-object": "^2.1.7",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.1",
     "react-i18next": "^14.0.0",
+    "react-multi-date-picker": "^4.4.1",
     "react-router-dom": "^6.11.2",
     "react-toastify": "^9.1.3",
     "swr": "^2.1.5"
