--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@iconify-icons/ph": "^1.2.5",
     "@iconify/react": "^4.1.0",
     "axios": "^1.4.0",
+    "chart.js": "^4.4.1",
     "class-variance-authority": "^0.6.0",
     "i18next": "^23.7.11",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-date-object": "^2.1.7",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.1",
