--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 # # Local variables
-VITE_ANALYSES_BASE_URL=http://192.168.2.23:8001 # javad
+# VITE_ANALYSES_BASE_URL=http://192.168.2.23:8001 # javad
 VITE_ANALYSES_BASE_URL=http://192.168.61.104:8001 # javad
 VITE_KEY_CLOAK_ADMIN_PANEL=http://192.168.1.109:8080
 VITE_CLIENT_BASE_URL=http://192.168.2.24:8000 # hooman
@@ -8,7 +8,7 @@ VITE_CLIENT_BASE_URL=http://192.168.2.24:8000 # hooman
 # VITE_KEY_CLOAK_ADMIN_PANEL=http://192.168.1.109:8080
 # VITE_ANALYSES_BASE_URL=https://sandbox.npd-co.com 
 # VITE_CLIENT_BASE_URL=https://daas.npd-co.com 
-VITE_IS_SSL=false
+VITE_IS_SSL=true
 
 
 
