--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "i18next": "^23.7.11",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
+    "moment-jalaali": "^0.10.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-date-object": "^2.1.7",
