--- a/.env.development
+++ b/.env.development
@@ -5,6 +5,7 @@ VITE_ANALYSES_BASE_URL=http://192.168.61.190:8001 # javad
 # VITE_CLIENT_BASE_URL=http://192.168.2.24:8000 # hooman
 VITE_CLIENT_BASE_URL=http://192.168.61.190:8000 # hooman
 # VITE_CLIENT_BASE_URL=http://192.168.200.2:8000 # hooman
+VITE_SARG_BASE_URL=http://192.168.200.2:8081
 
 # Server variables
 VITE_KEY_CLOAK_ADMIN_PANEL=http://192.168.1.109:8080
