update ( session recording )

--- a/.env.development
+++ b/.env.development
@@ -1,10 +1,11 @@
 # # Local variables
-# VITE_ANALYSES_BASE_URL=http://192.168.2.23:8001 # javad
-VITE_ANALYSES_BASE_URL=http://192.168.61.190:8001 # javad
+VITE_ANALYSES_BASE_URL=http://192.168.2.23:8001 # javad
+VITE_CLIENT_BASE_URL=http://192.168.2.23:8000 # javad
+# VITE_ANALYSES_BASE_URL=http://192.168.61.190:8001 # javad
 # VITE_ANALYSES_BASE_URL=http://192.168.200.2:8000 # javad
 # VITE_KEY_CLOAK_ADMIN_PANEL=http://192.168.1.109:8080
 # VITE_CLIENT_BASE_URL=http://192.168.2.24:8000 # hooman
-VITE_CLIENT_BASE_URL=http://192.168.61.192:8000 # hooman
+# VITE_CLIENT_BASE_URL=http://192.168.61.192:8000 # hooman
 
 
 # Server variables
@@ -12,7 +13,7 @@ VITE_SARG_BASE_URL=http://192.168.200.2:8081
 VITE_KEY_CLOAK_ADMIN_PANEL=http://192.168.1.109:8080
 # VITE_ANALYSES_BASE_URL=https://sandbox.npd-co.com 
 # VITE_CLIENT_BASE_URL=https://daas.npd-co.com 
-VITE_IS_SSL=true
+VITE_IS_SSL=false
 
 
 
