--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 # # Local variables
 VITE_ANALYSES_BASE_URL=http://192.168.2.23:8001 # javad
-# VITE_CLIENT_BASE_URL=http://192.168.2.23:8005 # javad
-VITE_CLIENT_BASE_URL=http://192.168.2.47:8000 # hooman
+VITE_CLIENT_BASE_URL=http://192.168.2.23:8005 # javad
+# VITE_CLIENT_BASE_URL=http://192.168.2.47:8000 # hooman
 # VITE_ANALYSES_BASE_URL=http://192.168.61.190:8001 # javad
 # VITE_ANALYSES_BASE_URL=http://192.168.200.2:8000 # javad
 VITE_KEY_CLOAK_ADMIN_PANEL=http://192.168.2.23:8080
