--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,5 +27,6 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["vite.config.ts", ".eslintrc.cjs", "src"],
+  "exclude": ["node_module", "dist"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
