--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,6 @@
 # # Local variables
-# VITE_ANALYSES_BASE_URL=http://192.168.2.23:8001 # javad
-# VITE_CLIENT_BASE_URL=http://192.168.2.23:8005 # javad
+# VITE_ANALYSES_BASE_URL=http://192.168.2.23:8000 # javad
+VITE_CLIENT_BASE_URL=http://192.168.2.23:8002 # javad
 # VITE_ANALYSES_BASE_URL=http://192.168.61.190:8001 # javad
 # VITE_ANALYSES_BASE_URL=http://192.168.200.2:8000 # javad
 # VITE_KEY_CLOAK_ADMIN_PANEL=http://192.168.2.23:8080
@@ -12,7 +12,7 @@
 # VITE_SARG_BASE_URL=http://192.168.200.2:8081
 VITE_KEY_CLOAK_ADMIN_PANEL=http://192.168.1.109:8080
 VITE_ANALYSES_BASE_URL=https://sandbox.npd-co.com 
-VITE_CLIENT_BASE_URL=https://daas.npd-co.com 
+# VITE_CLIENT_BASE_URL=https://daas.npd-co.com 
 VITE_IS_SSL=false
 
 
