--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-qr-code": "^2.0.14",
     "react-router-dom": "^6.11.2",
     "react-toastify": "^9.1.3",
+    "react-use-websocket": "^4.8.1",
     "swr": "^2.1.5"
   },
   "devDependencies": {
