--- a/.env.development
+++ b/.env.development
@@ -8,7 +8,7 @@ VITE_ANALYSES_BASE_URL=http://192.168.2.23:8001 # javad
 
 # Server variables
 VITE_SARG_BASE_URL=http://192.168.200.2:8081
-VITE_KEY_CLOAK_ADMIN_PANEL=http://192.168.1.109:8080
+VITE_KEY_CLOAK_ADMIN_PANEL=https://keycloak.npd-co.com/
 # VITE_ANALYSES_BASE_URL=https://sandbox.npd-co.com 
 # VITE_CLIENT_BASE_URL=https://daas.npd-co.com 
 # VITE_IS_SSL=false
