--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "^6.11.2",
     "react-toastify": "^9.1.3",
     "react-use-websocket": "^4.8.1",
+    "socket.io-client": "^4.7.5",
     "swr": "^2.1.5"
   },
   "devDependencies": {
