--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
     "react-router-dom": "^6.11.2",
     "react-toastify": "^9.1.3",
     "react-use-websocket": "^4.8.1",
-    "socket.io-client": "^4.7.5",
     "swr": "^2.1.5"
   },
   "devDependencies": {
@@ -47,6 +46,7 @@
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.14",
+    "crypto-js": "^4.2.0",
     "eslint": "^8.38.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-typescript": "^17.0.0",
