--- a/.env.development
+++ b/.env.development
@@ -8,7 +8,8 @@
 #VITE_WEB-SOCKET-URL=ws://192.168.2.23:8009
 
 # Server variables
-VITE_WEB_SOCKET_URL=ws://daas.npd-co.com
+VITE_WEB_SOCKET_URL=ws://192.168.200.2:8000
+# VITE_WEB_SOCKET_URL=ws://daas.npd-co.com
 VITE_SARG_BASE_URL=http://192.168.200.2:8081
 VITE_KEY_CLOAK_ADMIN_PANEL=https://keycloak.npd-co.com/
 VITE_ANALYSES_BASE_URL=https://sandbox.npd-co.com 
