--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,5 @@
 # # Local variables
-# VITE_CLIENT_BASE_URL=http://192.168.2.23:8009 # javad
+VITE_CLIENT_BASE_URL=http://192.168.2.23:8009 # javad
 # VITE_ANALYSES_BASE_URL=http://192.168.2.23:8001 # javad
 # VITE_KEY_CLOAK_ADMIN_PANEL=http://192.168.1.109:8080
 # VITE_CLIENT_BASE_URL=http://192.168.2.24:8000 # hooman
@@ -8,9 +8,9 @@
 #VITE_WEB-SOCKET-URL=ws://192.168.2.23:8009
 
 # Server variables
-VITE_WEB_SOCKET_URL=ws://192.168.200.2:8000
+# VITE_WEB_SOCKET_URL=ws://192.168.200.2:8000
 # VITE_WEB_SOCKET_URL=ws://daas.npd-co.com
-VITE_SARG_BASE_URL=http://192.168.200.2:8081
+# VITE_SARG_BASE_URL=http://192.168.200.2:8081
 VITE_KEY_CLOAK_ADMIN_PANEL=https://keycloak.npd-co.com/
 VITE_ANALYSES_BASE_URL=https://sandbox.npd-co.com 
 VITE_CLIENT_BASE_URL=https://daas.npd-co.com 
