--- a/.env.development
+++ b/.env.development
@@ -1,16 +1,16 @@
 # # Local variables
-VITE_CLIENT_BASE_URL=http://192.168.2.23:8009 # javad
+# VITE_CLIENT_BASE_URL=http://192.168.2.23:8009 # javad
 # VITE_ANALYSES_BASE_URL=http://192.168.2.23:8001 # javad
 # VITE_KEY_CLOAK_ADMIN_PANEL=http://192.168.1.109:8080
 # VITE_CLIENT_BASE_URL=http://192.168.2.24:8000 # hooman
 # VITE_CLIENT_BASE_URL=http://192.168.61.190:8000 # hooman
-# VITE_CLIENT_BASE_URL=http://192.168.200.2:8000 # hooman
+# VITE_CLIENT_BASE_URL=http://192.168.2.47:8000 # hooman
 #VITE_WEB-SOCKET-URL=ws://192.168.2.23:8009
 
 # Server variables
-VITE_WEB_SOCKET_URL=ws://192.168.200.2:8000
-# VITE_WEB_SOCKET_URL=ws://daas.npd-co.com
-# VITE_SARG_BASE_URL=http://192.168.200.2:8081
+# VITE_WEB_SOCKET_URL=ws://192.168.2.47:8000
+VITE_WEB_SOCKET_URL=ws://daas.npd-co.com
+VITE_SARG_BASE_URL=http://192.168.200.2:8081
 VITE_KEY_CLOAK_ADMIN_PANEL=https://keycloak.npd-co.com/
 VITE_ANALYSES_BASE_URL=https://sandbox.npd-co.com 
 VITE_CLIENT_BASE_URL=https://daas.npd-co.com 
