feat: add monitoring section

--- a/.env.production
+++ b/.env.production
@@ -10,6 +10,7 @@ VITE_SARG_BASE_URL=http://192.168.200.2:8081
 VITE_SYSTEM_ANALYSER_ONE=https://efk.npd-co.com
 VITE_SYSTEM_ANALYSER_TWO=https://monitoring.npd-co.com
 VITE_WEB_SOCKET_URL=ws://daas.npd-co.com
+VITE_MONITORING_SRC=https://netpardaz.com/
 
 VITE_IS_SSL=false
 
