--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "prepare": "husky install",
     "preview": "vite preview",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "clean": "rm -rf dist"
   },
   "dependencies": {
@@ -36,6 +38,15 @@
     "swr": "^2.1.5"
   },
   "devDependencies": {
+    "@chromatic-com/storybook": "^1.5.0",
+    "@storybook/addon-essentials": "^8.1.10",
+    "@storybook/addon-interactions": "^8.1.10",
+    "@storybook/addon-links": "^8.1.10",
+    "@storybook/addon-onboarding": "^8.1.10",
+    "@storybook/blocks": "^8.1.10",
+    "@storybook/react": "^8.1.10",
+    "@storybook/react-vite": "^8.1.10",
+    "@storybook/test": "^8.1.10",
     "@types/crypto-js": "^4.2.2",
     "@types/js-cookie": "^3.0.3",
     "@types/lodash": "^4.14.202",
@@ -63,6 +74,7 @@
     "postcss": "^8.4.23",
     "prettier": "^2.8.8",
     "sonarqube-scanner": "^3.0.1",
+    "storybook": "^8.1.10",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.4.2",
     "vite": "^5.0.11",
