fix: fixed error build

--- a/package.json
+++ b/package.json
@@ -15,6 +15,16 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
+    "@chromatic-com/storybook": "^1.5.0",
+    "@storybook/addon-essentials": "^8.1.10",
+    "@storybook/addon-interactions": "^8.1.10",
+    "@storybook/addon-links": "^8.1.10",
+    "@storybook/addon-onboarding": "^8.1.10",
+    "@storybook/blocks": "^8.1.10",
+    "@storybook/react": "^8.1.10",
+    "@storybook/react-vite": "^8.1.10",
+    "@storybook/test": "^8.1.10",
+    "@iconify-icons/line-md": "^1.2.30",
     "@iconify-icons/ph": "^1.2.5",
     "@iconify/react": "^4.1.0",
     "axios": "^1.4.0",
@@ -38,15 +48,7 @@
     "swr": "^2.1.5"
   },
   "devDependencies": {
-    "@chromatic-com/storybook": "^1.5.0",
-    "@storybook/addon-essentials": "^8.1.10",
-    "@storybook/addon-interactions": "^8.1.10",
-    "@storybook/addon-links": "^8.1.10",
-    "@storybook/addon-onboarding": "^8.1.10",
-    "@storybook/blocks": "^8.1.10",
-    "@storybook/react": "^8.1.10",
-    "@storybook/react-vite": "^8.1.10",
-    "@storybook/test": "^8.1.10",
+
     "@types/crypto-js": "^4.2.2",
     "@types/js-cookie": "^3.0.3",
     "@types/lodash": "^4.14.202",
