fix: useLogout & daasDashboard comfig

--- a/.env.development
+++ b/.env.development
@@ -16,4 +16,4 @@ VITE_ANALYSES_BASE_URL=https://sandbox.npd-co.com
 # VITE_CLIENT_BASE_URL=https://daas.npd-co.com
 VITE_MONITORING_SRC=https://netpardaz.com/
 
-VITE_IS_SSL=true
+VITE_IS_SSL=false
