--- a/.env.development
+++ b/.env.development
@@ -17,4 +17,4 @@ VITE_ANALYSES_BASE_URL=https://sandbox.npd-co.com
 VITE_CLIENT_BASE_URL=https://stagebackend.npd-co.com
 VITE_MONITORING_SRC=https://netpardaz.com/
 
-VITE_IS_SSL=false
+VITE_IS_SSL=true
