--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   },
   "dependencies": {
     "@chromatic-com/storybook": "^1.5.0",
+    "@iconify-icons/line-md": "^1.2.30",
+    "@iconify-icons/ph": "^1.2.5",
+    "@iconify/react": "^4.1.0",
     "@storybook/addon-essentials": "^8.1.10",
     "@storybook/addon-interactions": "^8.1.10",
     "@storybook/addon-links": "^8.1.10",
@@ -24,12 +27,11 @@
     "@storybook/react": "^8.1.10",
     "@storybook/react-vite": "^8.1.10",
     "@storybook/test": "^8.1.10",
-    "@iconify-icons/line-md": "^1.2.30",
-    "@iconify-icons/ph": "^1.2.5",
-    "@iconify/react": "^4.1.0",
     "axios": "^1.4.0",
     "chart.js": "^4.4.1",
+    "chartjs-adapter-date-fns": "^3.0.0",
     "class-variance-authority": "^0.6.0",
+    "date-fns": "^4.1.0",
     "i18next": "^23.7.11",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
@@ -48,7 +50,6 @@
     "swr": "^2.1.5"
   },
   "devDependencies": {
-
     "@types/crypto-js": "^4.2.2",
     "@types/js-cookie": "^3.0.3",
     "@types/lodash": "^4.14.202",
