--- a/.env.development
+++ b/.env.development
@@ -13,8 +13,8 @@ VITE_WEB_SOCKET_URL=ws://daas.npd-co.com
 VITE_SARG_BASE_URL=http://192.168.200.2:8081
 VITE_KEY_CLOAK_ADMIN_PANEL=https://keycloak.npd-co.com/
 # VITE_ANALYSES_BASE_URL=https://sandbox.npd-co.com 
-# VITE_CLIENT_BASE_URL=https://daas.npd-co.com
-VITE_CLIENT_BASE_URL=https://stagebackend.npd-co.com
+VITE_CLIENT_BASE_URL=https://daas.npd-co.com
+# VITE_CLIENT_BASE_URL=https://stagebackend.npd-co.com
 VITE_MONITORING_SRC=https://netpardaz.com/
 
 VITE_IS_SSL=true
