--- a/.env.development
+++ b/.env.development
@@ -1,11 +1,12 @@
 # # Local variables
 # VITE_CLIENT_BASE_URL=http://192.168.2.23:8009 # javad
-VITE_ANALYSES_BASE_URL=http://192.168.2.23:8001 # javad
+# VITE_ANALYSES_BASE_URL=http://192.168.2.23:8001 # javad
 # VITE_KEY_CLOAK_ADMIN_PANEL=http://192.168.1.109:8080
 # VITE_CLIENT_BASE_URL=http://192.168.2.47:8000 # hooman
 # VITE_CLIENT_BASE_URL=http://192.168.61.190:8000 # hooman
 # VITE_CLIENT_BASE_URL=http://172.16.2.10:8000 # hooman
 #VITE_WEB-SOCKET-URL=ws://192.168.2.23:8009
+VITE_ANALYSES_BASE_URL=https://sandbox.npd-co.com
 
 # Server variables
 # VITE_WEB_SOCKET_URL=ws://192.168.2.47:8000
