feat:Access download upload

--- a/.env.development
+++ b/.env.development
@@ -6,6 +6,8 @@
 # VITE_CLIENT_BASE_URL=http://192.168.61.190:8000 # hooman
 # VITE_CLIENT_BASE_URL=http://172.16.2.10:8000 # hooman
 #VITE_WEB-SOCKET-URL=ws://192.168.2.23:8009
+# VITE_CLIENT_BASE_URL=http://192.168.5.158:8000 # mohsen
+
 VITE_ANALYSES_BASE_URL=https://sandbox.npd-co.com
 
 # Server variables
