change route daas dashboard

--- a/.env.development
+++ b/.env.development
@@ -20,4 +20,4 @@ VITE_CLIENT_BASE_URL=https://daas.npd-co.com
 # VITE_CLIENT_BASE_URL=https://stagebackend.npd-co.com
 VITE_MONITORING_SRC=https://netpardaz.com/
 
-VITE_IS_SSL=true
+VITE_IS_SSL=false
