--- a/.env.development
+++ b/.env.development
@@ -10,12 +10,12 @@ VITE_ANALYSES_BASE_URL=http://192.168.2.23:8001 # javad
 
 # Server variables
 # VITE_WEB_SOCKET_URL=ws://192.168.2.47:8000
-VITE_WEB_SOCKET_URL=ws://192.168.2.23:8000 
+VITE_WEB_SOCKET_URL=ws://daas.npd-co.com
 VITE_SARG_BASE_URL=http://192.168.200.2:8081
 VITE_KEY_CLOAK_ADMIN_PANEL=https://keycloak.npd-co.com/
 # VITE_ANALYSES_BASE_URL=https://sandbox.npd-co.com 
-# VITE_CLIENT_BASE_URL=https://daas.npd-co.com
+VITE_CLIENT_BASE_URL=https://daas.npd-co.com
 # VITE_CLIENT_BASE_URL=https://stagebackend.npd-co.com
 VITE_MONITORING_SRC=https://netpardaz.com/
 
-VITE_IS_SSL=false
+VITE_IS_SSL=true
