--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,6 @@
 # # Local variables
-# VITE_CLIENT_BASE_URL=http://192.168.2.23:8009 # javad
-# VITE_ANALYSES_BASE_URL=http://192.168.2.23:8001 # javad
+VITE_CLIENT_BASE_URL=http://192.168.2.22:8000 # javad
+VITE_ANALYSES_BASE_URL=http://192.168.2.22:8001 # javad
 # VITE_KEY_CLOAK_ADMIN_PANEL=http://192.168.1.109:8080
 # VITE_CLIENT_BASE_URL=http://192.168.2.47:8000 # hooman
 # VITE_CLIENT_BASE_URL=http://192.168.61.190:8000 # hooman
@@ -12,9 +12,9 @@
 VITE_WEB_SOCKET_URL=ws://stagebackend.npd-co.com
 VITE_SARG_BASE_URL=http://192.168.200.2:8081
 VITE_KEY_CLOAK_ADMIN_PANEL=https://keycloak.npd-co.com/
-VITE_ANALYSES_BASE_URL=https://stagemalware.npd-co.com 
+# VITE_ANALYSES_BASE_URL=https://stagemalware.npd-co.com 
 # VITE_CLIENT_BASE_URL=https://daas.npd-co.com
-VITE_CLIENT_BASE_URL=https://stagebackend.npd-co.com
+# VITE_CLIENT_BASE_URL=https://stagebackend.npd-co.com
 VITE_MONITORING_SRC=https://netpardaz.com/
 
 VITE_IS_SSL=false
